--- a/src/app.css
+++ b/src/app.css
@@ -23,3 +23,8 @@ The following CSS rule changes the font size of all Buttons that have the
 Button.-primary {
     font-size: 18;
 }
+.border{
+    border-width: 1; 
+    border-color: #9f9f9f;
+    border-radius: 5;
+}
