Configure the UISideDrawer component in the .ts and the .html file of the app level & create new folder to host the icon on the navbar

--- a/src/app.css
+++ b/src/app.css
@@ -28,3 +28,35 @@ Button.-primary {
     border-color: #9f9f9f;
     border-radius: 5;
 }
+.sidedrawer-left {
+    background-color: #D1C4E9;
+}
+
+.sidedrawer-header {
+    background-color: #512DA8;
+}
+
+.sidedrawer-header .sidedrawer-header-image {
+    background-color: #512DA8;
+    margin: 10;
+}
+
+.sidedrawer-header .sidedrawer-header-brand {
+    color: #ffffff;
+    font-size: 30;
+}
+
+.sidedrawer-list-item {
+    padding-left: 15;
+    color: black;
+}
+
+.sidedrawer-list-item-text {
+    font-size: 20;
+    border-width: 0;
+}
+
+.selected {
+    background-color: #B39DDB;
+    color: blue;
+}
