Fix the rendering and the configuration of the newly added folders and files for the two page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,12 @@
                 <GridLayout columns="auto" class="sidedrawer-list-item" [class.selected]="isComponentSelected('/menu')" (tap)="onNavItemTap('/menu')">
                     <Label col="1" text="Menu" class="sidedrawer-list-item-text"></Label>
                 </GridLayout>
+                <GridLayout columns="auto" class="sidedrawer-list-item" [class.selected]="isComponentSelected('/about')" (tap)="onNavItemTap('/about')">
+                    <Label col="1" text="About Us" class="sidedrawer-list-item-text"></Label>
+                </GridLayout>
+                <GridLayout columns="auto" class="sidedrawer-list-item" [class.selected]="isComponentSelected('/contact')" (tap)="onNavItemTap('/contact')">
+                    <Label col="1" text="Contact Us" class="sidedrawer-list-item-text"></Label>
+                </GridLayout>
             </StackLayout>
         </ScrollView>
     </GridLayout>
