--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,5 @@
 <ActionBar title="Menu" class="action-bar">
+    <NavigationButton  android.systemIcon="ic_menu_back"(tap)="goBack()"></NavigationButton>
 </ActionBar>
 <StackLayout class="page">
 
