Add new Lable and font unicode to the navigation bar to allow the navigation to and from the Reserve page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,6 +29,10 @@
                     <Label col="1" text="Favorites" class="sidedrawer-list-item-text"></Label>
                 </GridLayout>
 
+                <GridLayout columns="* 100" class="sidedrawer-list-item" [class.selected]="isComponentSelected('/reservation')" (tap)="onNavItemTap('/reservation')">
+                    <Label col="0" class="sidedrawer-list-item-text fa" text="&#xf0f5;"></Label>
+                    <Label col="1" text="Reserve" class="sidedrawer-list-item-text"></Label>
+                </GridLayout>
 
                 <GridLayout columns="* 100" class="sidedrawer-list-item" [class.selected]="isComponentSelected('/contact')" (tap)="onNavItemTap('/contact')">
                     <Label col="0" class="sidedrawer-list-item-text fa" text="&#xf2bb;"></Label>
