--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -2,22 +2,33 @@
     <NavigationButton android.systemIcon="ic_menu_back" (tap)="goBack()"></NavigationButton>
     <ActionItem ios.systemIcon="9" android.systemIcon="ic_menu_more" (tap)="showDialog()"></ActionItem>
 </ActionBar>
-<ScrollView orientation="vertical">
-    <GridLayout class="m-5" rows="auto auto auto" *ngIf="dish">
-        <StackLayout row="0" class="p-10 border"> 
-            <Image [src]="dish.image"></Image>
+    <GridLayout class="m-5" rows="auto auto auto" *ngIf="dish"
+    (swipe)="onSwipe($event)">
+        <StackLayout id="cardLayout" row="0" class="p-10 border"> 
+            <Image 
+            id="cardImage" 
+            stretch="aspectFill"
+            [src]="dish.image"
+            [visibility]="!(showComments) ? 'visible' : 'collapsed'">
+            </Image>
             <StackLayout>
                 <Label class="h2" [text]="dish.name"></Label>
                 <Label class="body" [text]="dish.description" textWrap="true"></Label>      
             </StackLayout>
             <GridLayout orientation="horizontal" rows="*" columns="*, *, *" class="m-t-20">
                 <Button row="0" col="0" [text]="avgstars + ' stars'" class="btn btn-rounded-sm btn-outline color"></Button>
-                <Button row="0" col="1" [text]="numcomments + ' comments'" class="btn btn-rounded-sm btn-outline color"></Button>
-                <Button row="0" col="2" [text]="(favorite ? '&#xf004;' : '&#xf08a;' )" class="btn btn-rounded-sm btn-outline color fa filled-in" (tap)="addToFavorites()"></Button>
+                <Button row="0" col="1" [text]="numcomments + ' comments'" class="btn btn-rounded-sm btn-outline color"
+                 (tap)="showAndHideComments()"></Button>
+                <Button row="0" col="2" [text]="(favorite ? '&#xf004;' : '&#xf08a; ' )" class="btn btn-rounded-sm btn-outline color fa filled-in" (tap)="addToFavorites()"></Button>
             </GridLayout>
         </StackLayout>
         <Label row="1" height="40" class="p-10 m-t-10 h3" text="Comments"></Label>
-        <ListView row="2" height="500" [items]="dish.comments" class="list-group p-10">
+        <ListView id="commentList" 
+        row="2"
+        height="300"
+        [items]="dish.comments" 
+        class="list-group p-10"
+        [visibility]="(showComments) ? 'visible': 'collapsed'">
             <ng-template let-comment="item">
                 <StackLayout class="list-group-item">
                     <Label class="list-group-item-heading" [text]="comment.comment" textWrap="true"></Label>
@@ -34,7 +45,4 @@
         </ListView>
     </GridLayout>
     <ActivityIndicator busy="true"  *ngIf="!(dish || errMess)" width="50" height="50" class="activity-indicator"></ActivityIndicator>
-    <Label *ngIf="errMess" [text]="'Error: ' + errMess">
-
-    </Label>
-</ScrollView>
+    <Label *ngIf="errMess" [text]="'Error: ' + errMess"></Label>
