--- a/src/app/reservation/reservation.component.html
+++ b/src/app/reservation/reservation.component.html
@@ -1,4 +1,14 @@
 <ActionBar title="Reserve Table" class="action-bar">
+    <NavigationButton  android.systemIcon="ic_menu_back"(tap)="goBack()"></NavigationButton>
+    <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
+    <!-- 
+    Use the ActionItem for IOS with position set to left. Using the
+    NavigationButton as a side-drawer button in iOS is not possible,
+    because its function is to always navigate back in the application.
+    -->
+    <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
+        ios.position="left">
+    </ActionItem>
 </ActionBar>
 <ScrollView orientation="vertical" tkMainContent class="page">
     <GridLayout class="m-5" rows="auto auto auto auto" columns="*, *" [formGroup]="reservation">
