Add animation and persist data to CouchDB in the reservation form

--- a/src/app.css
+++ b/src/app.css
@@ -35,7 +35,7 @@ action-bar{
     border-radius: 5;
 }
 .sidedrawer-left {
-    background-color: whitesmoke;
+    background-color:  white;
 }
 
 .sidedrawer-header {
