--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <RadSideDrawer [drawerTransition]="sideDrawerTransition">
     <GridLayout tkDrawerContent rows="auto, *" class="sidedrawer sidedrawer-left">
-        <GridLayout row="0" class="sidedrawer-header" rows="auto" columns="100, *">
-            <Image row="0" col="0" src="res://rcflogo" class="sidedrawer-header-image"></Image>
-            <Label row="0" col="1" text="Ristorante Con Fusion" class="sidedrawer-header-brand" textWrap="true"></Label>
+        <GridLayout row="0" class="sidedrawer-header" rows="auto" columns="auto">
+            <Label row="0" text="Restaurant 816" class="sidedrawer-header-brand" textWrap="true"></Label>
         </GridLayout>
 
         <ScrollView row="1">
