--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -25,7 +25,7 @@
         row="0" 
         col="0" 
         [text]="('&#xf095; Call')" 
-        class="btn btn-rounded-sm btn-outline color fa"></Button>
+        class="btn btn-rounded-sm btn-outline color fa" (tap)="callRestaurant()"></Button>
         <Button 
         row="0" 
         col="1" 
