Add new capability to the application: Selecting images from the phone gallery using the imagepicker plugin.

--- a/src/app/userauth/userauth.component.html
+++ b/src/app/userauth/userauth.component.html
@@ -40,7 +40,7 @@
                     <Button row="0" col="0" text="Take Picture"
                         class="btn btn-rounded-sm btn-outline" (tap)="takePicture()"></Button>
                     <Button row="0" col="1" text="Select Image"
-                        class="btn btn-rounded-sm btn-outline"></Button>
+                        class="btn btn-rounded-sm btn-outline" (tap)="getFromLibrary()"></Button>
                 </GridLayout>
             </GridLayout>
             <ScrollView orientation="vertical">
